#62 hotfix: allowedHeaders 추가